...
}

enum ExportPreset: String, CaseIterable, Identifiable {
    case videoLoop = "VideoLoop"
    case videoLoopWithSound = "VideoLoop with sound"
    case animatedStill = "Animated Still"
    case h264 = "H.264 / AVC"
    case h265 = "H.265 / HEVC"
    case av1 = "AV1"
    case av2 = "AV2"
    case tvHEVC = "TV (HEVC 10-bit 4:2:2)"
    case tvAVCIntra = "TV (AVC-Intra MXF)"
    case prores = "ProRes"
...
